[package]
name = "error-toon"
version = "1.1.2"
edition = "2021"
authors = ["Andrii Drozdenko <adrozdenko@pm.io>"]
description = "Compress verbose browser errors for LLM consumption. Save 70-90% tokens."
license = "MIT"
repository = "https://github.com/adrozdenko/error-toon"
homepage = "https://github.com/adrozdenko/error-toon"
documentation = "https://github.com/adrozdenko/error-toon#readme"
readme = "README.md"
keywords = ["cli", "errors", "llm", "tokens", "compression"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/*"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
arboard = "3"
once_cell = "1"
colored = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
